<resources>
    <string name="app_name">Threadify</string>
    <string name="about_app">Threadify is a cutting-edge digital wallet app designed to revolutionize the way you handle money. Whether you’re sending funds to friends and family, paying bills, or shopping online, Threadify offers a fast, secure, and seamless experience for all your financial needs. Inspired by the functionality of e-wallets like GCash and PayMaya, Threadify takes convenience to the next level by providing instant money transfers, flexible payment solutions, and an intuitive user interface that’s perfect for everyone.

What sets Threadify apart is its robust security features, ensuring that your transactions and personal data remain protected at all times. With Threadify, you can manage your finances anytime, anywhere, without the stress of traditional banking systems. It’s not just a wallet; it’s your partner in achieving financial independence. Empower your lifestyle with Threadify and experience the future of money management today!
</string>

    <string name="daveBio">I am Dave Geroleo, a passionate Frontend Developer with 2years of experience  in crafting responsive and user-friendly, and visually appealling website applications ensuring that user can use the app without any hassle. profecient in technologies like HTML, CSS, Javascript, and Java. I hold a Bachelors of Science in Information Technology Software Development Track at Marinduque State University.</string>
    <string name="carlBio">I am Carl Madrigal, a skilled backend Developer with 2 years of experience in building robust, scalable, and efficient server-side applications. I specialize in developing Database design, and functionality.  I hold a Bachelors of Science in Information Technology Software Development Track at Marinduque State University.</string>
    <string name="elpieBio">I am Elpie Landoy, a creative and detail-oriented graphics Designer with 3years of experience in crafting visually compelling designs for digital and print media. I specialize creating brand identities, marketing materials, and UI/UX designs. I hold a Bachelors of Science in Information Technology Software Development Track at Marinduque State University.</string>
    <string name="aldrinbio">I am Aldrin James Palma, an innovative and detail-oriented Content Strategist with 2years of experience in planning, developing, and managing content strategies that drive user engagement and achieve business goal. I specialize in creating user-centered content that enhances app usability and retention. I hold a Bachelors of Science in Information Technology Software Development Track at Marinduque State University.</string>
    <string name="about_threadify">About Threadify</string>
    <string name="accountSettingEmail">Enter your email</string>
    <string name="accountSettingUsername">Enter your username</string>
    <string name="accountSettingFullname">Enter your full name</string>
    <string name="accountSettingPhoneNumber">Enter your phone number</string>
    <string name="accountSettingTodo">TODO</string>
    <string name="meet_the_developers">Meet the Developers</string>
</resources>