<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/profilebg2"
    tools:context=".AccountSettingActivity">


    <EditText
        android:id="@+id/emailFld"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:background="@color/white"
        android:ems="10"
        android:enabled="false"
        android:fontFamily="@font/poppins_semibold"
        android:hint="@string/accountSettingEmail"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textColor="@color/text_color_dark"
        android:textColorHint="@color/text_color_dark"
        app:layout_constraintEnd_toEndOf="@+id/usernameFld"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/usernameFld"
        app:layout_constraintTop_toBottomOf="@+id/textView21" />

    <EditText
        android:id="@+id/usernameFld"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:autofillHints=""
        android:background="@color/white"
        android:ems="10"
        android:enabled="false"
        android:fontFamily="@font/poppins_semibold"
        android:hint="@string/accountSettingUsername"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textColor="@color/text_color_dark"
        android:textColorHint="@color/text_color_dark"
        app:layout_constraintEnd_toEndOf="@+id/fullnameFld"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/fullnameFld"
        app:layout_constraintTop_toBottomOf="@+id/textView20" />

    <EditText
        android:id="@+id/fullnameFld"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:autofillHints=""
        android:background="@color/white"
        android:ems="10"
        android:enabled="false"
        android:fontFamily="@font/poppins_semibold"
        android:hint="@string/accountSettingFullname"
        android:gravity="center"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="@color/text_color_dark"
        android:textColorHint="@color/text_color_dark"
        app:layout_constraintEnd_toEndOf="@+id/imageView7"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/imageView7"
        app:layout_constraintTop_toBottomOf="@+id/imageView7" />

    <EditText
        android:id="@+id/phoneNumberFld"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:background="@color/white"
        android:ems="10"
        android:enabled="false"
        android:fontFamily="@font/poppins_semibold"
        android:hint="@string/accountSettingPhoneNumber"
        android:inputType="phone"
        android:maxLength="10"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textColor="@color/text_color_dark"
        android:textColorHint="@color/text_color_dark"
        app:layout_constraintEnd_toEndOf="@+id/emailFld"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/emailFld"
        app:layout_constraintTop_toBottomOf="@+id/textView22" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginTop="112dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/defaultprof"
        android:contentDescription="@string/accountSettingTodo" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-10dp"
        android:fontFamily="@font/questrial"
        android:text="Full name"
        android:textColor="@color/text_color_body"
        app:layout_constraintEnd_toEndOf="@+id/fullnameFld"
        app:layout_constraintStart_toStartOf="@+id/fullnameFld"
        app:layout_constraintTop_toBottomOf="@+id/fullnameFld" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-10dp"
        android:fontFamily="@font/questrial"
        android:text="Username"
        android:textColor="@color/text_color_body"
        app:layout_constraintEnd_toEndOf="@+id/usernameFld"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/usernameFld"
        app:layout_constraintTop_toBottomOf="@+id/usernameFld" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-10dp"
        android:fontFamily="@font/questrial"
        android:text="Email"
        android:textColor="@color/text_color_body"
        app:layout_constraintEnd_toEndOf="@+id/emailFld"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/emailFld"
        app:layout_constraintTop_toBottomOf="@+id/emailFld" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-10dp"
        android:fontFamily="@font/questrial"
        android:text="Phone number"
        android:textColor="@color/text_color_body"
        app:layout_constraintEnd_toEndOf="@+id/phoneNumberFld"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="@+id/phoneNumberFld"
        app:layout_constraintTop_toBottomOf="@+id/phoneNumberFld" />

</androidx.constraintlayout.widget.ConstraintLayout>